====================
2017/5/4, 5/24
v 4-0.221

- Changed Engine::addForeignFunctionInstance() to addForeignFunction().
- Updated template void addForeignFuncInstance() to use Engine::addForeignFunction().
- Changed profiling code.
- Corrected comparison of parameter count and arg count in Engine::setupForeignFunctionExecution(). Both go to uint now.
- Changed Engine::process_sys_member_count to accept only one parameter.
- Fixed bug in ObjectNumber that was using a numeric constructor for CharList that had been removed. Value was casted to pointer.
-- Added String::appendULong()
- Fixed bug in Engine::process_sys_are_empty() that was returning different results based on argument order.
- Fixed bug for own(), is_ptr(), and is_owner() that failed to collect the parameters correctly.
- Fixed bug in Engine::ParseFuncFound_CollectParams() that did not allow passing execution bodies as parameters.
- Fixed bug in Engine::ParseFunctionBuild_CollectParameters() that failed to properly terminate short object bodies when stream did not end.
- Changed EngineMessage::StreamInterruptedInComment to EngineMessage::StreamHaltedInComment.
- Changed EngineMessage::StreamInterruptedInString to EngineMessage::StreamHaltedInString.
- Added new values to EngineMessage:
-- StreamHaltedParsingNotDone
-- ObjectBodyInvalid
-- ObjectBodyInvalidParamAsgn
-- ObjectBodyInvalidParamPtrAsgn
-- ExecBodyUnfinished
-- ArgBodyIncomplete
-- SystemFuncInvalidAccess
-- ForeignFuncInvalidAccess
-- IfConditionContaminated
-- UselessLoopStopper
-- UselessLoopSkipper
-- SystemFunctionBadArg
-- SystemFunctionWrongArgCount
-- ForeignFunctionWrongArgCount
-- ForeignFunctionBadArg
-- UserFunctionBodyError
-- MemberWrongArgCount
-- IsMemberWrongArgCount
-- SetMemberWrongArgCount
-- replacements of ones saying "Param" to those saying "Arg"

- Removed unused values from EngineMessage:
-- InvalidTokenAtFunctionStart
-- UnusedAsgnInFunctionBuildParams
-- UnusedPtrAsgnInFunctionBuildParams