@@ -7,22 +7,29 @@ body {
 	background-color:#111111;
 	color:#dca;
 }
-h1 {
-	background-color:#212120;
-	color:#e0e0e0;
-	padding:20px;
-	border-radius:5px;
-	border-top: 1px solid #838363;
-	border-bottom: 1px solid #000;
-}
-p {
-	/*color:#333;*/
-}
 .centering {
 	max-width: 900px;
 	margin:0 auto;
 }
-
+#main-menu {
+	position: relative;
+	left: 0;
+	right: 0;
+	width: 500px;
+	height: 40px;
+}
+#main-menu > a, #main-menu > div {
+	position: relative;
+	min-width: 100px;
+	height: 20px;
+	display:inline-block;
+	padding: 15px;
+	border-radius: 5px;
+	border: 1px solid #a97;
+	background-color: #864;
+	color: #eda;
+	text-decoration:none;
+}
 .toc {
 	background-color:#222200;
 	padding:20px 0px 20px 50px;
@@ -36,7 +43,17 @@ p {
 	color: #dd9;
 	/*text-decoration:none;*/
 }
-
+h1 {
+	background-color:#212120;
+	color:#e0e0e0;
+	padding:20px;
+	border-radius:5px;
+	border-top: 1px solid #838363;
+	border-bottom: 1px solid #000;
+}
+p {
+	/*color:#333;*/
+}
 h2 {
 	background-color:#212120;
 	padding:10px;
@@ -91,7 +108,13 @@ blue { color:#4af; }
 <body>
 <div class="centering">
 
-<h1>Copper - in 5 minutes</h1>
+<div id="main-menu">
+	<a href="CopperLangGuide.html"><div>Language Guide</div></a>
+	<a href="InterpreterUsageGuide.html"><div>Interpreter Guide</div></a>
+	<!--<div>Syntax in 5mins</div>-->
+</div>
+
+<h1>Copper in 5 minutes</h1>
 
 <pre><code>
 <grey># Comments are between \#'s and multiline but a slash escapes characters. #</grey>
